--- a/src/visao/.gitignore
+++ b/src/visao/.gitignore
@@ -2,3 +2,7 @@
 /ccc.class
 /login$1.class
 /login.class
+/CadastroConta$1.class
+/CadastroConta.class
+/CadastroContas$1.class
+/CadastroContas.class
