Código (não foi na tela principal)

--- a/src/visao/.gitignore
+++ b/src/visao/.gitignore
@@ -8,3 +8,10 @@
 /CadastroContas.class
 /RoundJTextField.class
 /RoundButton.class
+/TelaPrincipal$1.class
+/TelaPrincipal.class
+/CadastroContas$2.class
+/CadastroContas$3.class
+/TelaErro$1.class
+/TelaErro.class
+/TelaErro$2.class
