Ajuste do projeto

--- a/src/visao/.gitignore
+++ b/src/visao/.gitignore
@@ -15,3 +15,7 @@
 /TelaErro$1.class
 /TelaErro.class
 /TelaErro$2.class
+/telaLogin$1.class
+/telaLogin$2.class
+/telaLogin$3.class
+/telaLogin.class
