--- a/.classpath
+++ b/.classpath
@@ -6,15 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="com.miglayout.swing_11.3.0.jar"/>
-	<classpathentry kind="lib" path="com.miglayout.core_11.3.0.jar"/>
-	<classpathentry kind="lib" path="mysql-connector-j-9.0.0.jar"/>
-	<classpathentry kind="lib" path="javax.mail-1.6.2.jar"/>
-<<<<<<< Updated upstream
-=======
 	<classpathentry kind="lib" path="activation-1.1.1.jar"/>
->>>>>>> Stashed changes
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="com.miglayout.core_11.3.0.jar"/>
+	<classpathentry kind="lib" path="com.miglayout.swing_11.3.0.jar"/>
+	<classpathentry kind="lib" path="javax.mail-1.6.2.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-j-9.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
